# bilibili-live-text-chat

./: .gitignore  README.md  pyproject.toml  run.pyw  start.bat
bili_chat/: bili_client.py  main.py  ui.py
