[project]
name = "bilibili-live-text-chat"
version = "0.1.0"
description = "Bilibili 直播彈幕聊天室桌面應用"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "bilibili-api-python>=17.4.2",
    "customtkinter>=6.0.0",
    "httpx>=0.28.1",
]

[project.scripts]
bili-chat = "bili_chat.main:main"

[tool.uv]
package = true
